--- a/src/app/features/trainer-dashboard/components/trainer-info/trainer-info.component.scss
+++ b/src/app/features/trainer-dashboard/components/trainer-info/trainer-info.component.scss
@@ -1,6 +1,6 @@
 .profile-card {
     flex: 1;
-    max-width: 340px;
+    width: 260px;
     background-color: #FFC600;
     border-radius: 1rem;
     padding: 2rem;
@@ -9,24 +9,25 @@
     flex-direction: column;
     align-items: center;
     
+    
     @media (max-width: 768px) {
       max-width: 100%;
     }
   }
   
   .profile-name {
-    font-size: 1.8rem;
-    font-weight: 600;
-    color: #185A7D;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #4B4B4B;
     margin-bottom: 1.5rem;
   }
   
   .profile-photo {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     overflow: hidden;
-    border: 5px solid white;
+    border: 10px solid white;
     margin-bottom: 2rem;
     
     img {
@@ -38,6 +39,15 @@
   
   .profile-details {
     width: 100%;
+  }
+
+  .title-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 1rem;
   }
   
   .detail-item {
