--- a/src/app/features/trainer-dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/features/trainer-dashboard/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- Dashboard Container -->
-<div class="dashboard-container">
+<div class="dashboard-container" *ngIf="!isLoading">
     <!-- Header -->
     <div class="dashboard-header">
       <div class="header-flex">
