--- a/src/app/features/trainer-profile/pages/profile-edit/profile-edit.component.html
+++ b/src/app/features/trainer-profile/pages/profile-edit/profile-edit.component.html
@@ -1,5 +1,5 @@
 <!-- Profile Creation Container -->
-<div class="profile-create-container">
+<div class="profile-create-container" *ngIf="!isLoading">
     <!-- Back Link -->
     <div class="back-link">
       <a routerLink="/home">
